<resources>
    <string name="lang">eng</string>
    <string name="app_name">TESTNET</string>
    <string name="rateme">&#9825; Rate me</string>
    <string name="offline">OFFLINE</string>
    <string name="bitcoin_wallet">Bitcoin</string>
    <string name="delayed_pending">pending</string>
    <string name="lightning_wallet">Lightning</string>
    <string name="total_balance">Total balance</string>
    <string name="hosted_channel">HOSTED CHANNEL</string>
    <string name="delayed_refunding">Delayed channel refunding</string>
    <string name="paste_from_clipboard">Paste from clipboard</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="add_address">More fresh addresses</string>
    <string name="search_recent">Search recent activity</string>
    <string name="emergency_mode">Something went wrong</string>
    <string name="emergency_share">Share error report</string>
    <string name="setup_title">Wallet setup</string>
    <string name="setup_create_new">Create new wallet</string>
    <string name="setup_restore_existing">Restore existing wallet</string>
    <string name="setup_recovery_phrase">Recovery phrase only</string>
    <string name="setup_backup_file">Backup + recovery phrase</string>
    <string name="setup_create_new_hint">A completely fresh Bitcoin wallet with a new recovery phrase will be generated from scratch.</string>
    <string name="share_lnurl_pay">lnurlp:%1$s</string>
    <string name="share_chain_tx">Bitcoin transaction hex: %1$s</string>
    <string name="share_ln_payment">Signed invoice: %1$s\n\nProof of payment: %2$s</string>
    <string name="setup_backup_file_hint">
        Provide a file containing Lightning backup, then provide a recovery
        phrase to fully restore Bitcoin wallet along with Lightning channels.
        Turn other copies of your wallet off before proceeding.
    </string>
    <string name="setup_recovery_phrase_hint">
        Provide a BIP-39 phrase to restore Bitcoin wallet and hosted channels only.
        If you had any Lightning channels on a previous device, their balances will
        be refunded on connecting to remote nodes you had them with.
    </string>
    <string name="action_backup_present_title"><![CDATA[
        Wallet recovery phrase<br><br><small><b>Lightning backup file is present</b>.
        <br><br>Recovery phrase will be used to decrypt it and restore fully working channels on this device.<br><br>
        Lightning channels can work correctly on one device at a time, please do not use them on previous device once restored on this one.</small>
    ]]></string>
    <string name="action_recovery_phrase_title">Wallet recovery phrase</string>
    <string name="action_recovery_phrase_hint">Type recovery words</string>
    <string name="menu_chans_stats">Channels and stats</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_receive">Receive</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_split">Split</string>
    <string name="dialog_share">Share</string>
    <string name="dialog_break">Break</string>
    <string name="dialog_open">Open</string>
    <string name="dialog_copy">Copy</string>
    <string name="dialog_info">Info</string>
    <string name="dialog_max">Max</string>
    <string name="dialog_pay">Pay</string>
    <string name="dialog_visibility_public">visible to sender</string>
    <string name="dialog_visibility_private">visible to you only</string>
    <string name="dialog_add_description">Add description&#8230;</string>
    <string name="dialog_set_record_label">Set item label&#8230;</string>
    <string name="dialog_add_btc_label">Add transaction label&#8230;</string>
    <string name="dialog_add_ln_label">Add payment label&#8230;</string>
    <string name="dialog_add_comment">Add comment&#8230;</string>
    <string name="dialog_receive_btc"><![CDATA[Receive to <b>Bitcoin</b> Address]]></string>
    <string name="dialog_receive_ln"><![CDATA[Receive to <b>Lightning</b> Invoice]]></string>
    <string name="dialog_up_to"><![CDATA[<b>up to</b> %1$s]]></string>
    <string name="dialog_fee_sat_vbyte"><![CDATA[<b>fee</b> %1$s sat/vB]]></string>
    <string name="dialog_change_feerate">Change feerate&#8230;</string>
    <string name="dialog_insufficient_funds">missing funds</string>
    <string name="dialog_sat_vbyte">sat/vB</string>
    <string name="dialog_send_ln"><![CDATA[Send <b>Lightning</b> payment%1$s]]></string>
    <string name="dialog_split_ln"><![CDATA[Split <b>Lightning</b> payment%1$s]]></string>
    <string name="dialog_send_btc"><![CDATA[Send <b>Bitcoin</b> transaction<br><b>to address</b> %1$s%2$s]]></string>
    <string name="dialog_split_ln_tip">First let someone scan a split invoice.\nThen tap PAY at about the same time.</string>
    <string name="dialog_ln_requested"><![CDATA[<b>requested</b>&#160;%1$s]]></string>
    <string name="dialog_ln_left"><![CDATA[<b>left to pay</b>&#160;%1$s]]></string>
    <string name="error_channel">Channel error happened</string>
    <string name="error_channel_remote"><![CDATA[<b>Error from remote peer</b>:<br><br>%1$s]]></string>
    <string name="error_channel_closed"><![CDATA[<b>Channel has been force-closed by wallet, fatal error details</b>:<br><br>%1$s]]></string>
    <string name="error_channel_suspended"><![CDATA[<b>Hosted channel has been suspended by wallet, fatal error details</b>:<br><br>%1$s]]></string>
    <string name="error_channel_unknown">
        Remote peer indicates that there exists a Lightning channel which is somehow not present on this device.\n\n
        Peer can be requested to break that channel which would get the rest of its balance back to your chain wallet.\n\n
        Channel ID: %1$s\n\n
        Peer node ID: %2$s
    </string>
    <string name="error_rejected_incoming_public">Rejected public channel offer, only private channels are allowed.</string>
    <string name="error_btc_broadcast_fail">Could not broadcast a transaction, please make sure that wallet has network connection and then try again.</string>
    <string name="error_could_not_decrypt"><![CDATA[<b>Backup decryption failed</b>.<br><br>Make sure that both backup file and recovery phrase are correct.<br><br>Error details:<br><br>%1$s]]></string>
    <string name="error_wrong_phrase"><![CDATA[<b>A phrase must be 12 or 24 words long</b>.<br><br><b>All words must be different</b>.]]></string>
    <string name="error_nothing_useful">Nothing useful is found.</string>
    <string name="error_ln_no_chans"><![CDATA[Can neither send nor receive Lightning payments because no open channels are present.]]></string>
    <string name="error_ln_waiting"><![CDATA[Can neither send nor receive Lightning payments because none of your channels is open yet.<br><br>Please wait for more channel funding confirmations.]]></string>
    <string name="error_ln_receive_no_update"><![CDATA[Can\'t request Lightning payments because receiving parameters are not yet available, please wait for more channel funding confirmations.]]></string>
    <string name="error_ln_receive_reserve"><![CDATA[Can\'t request Lightning payments yet because first you need to spend at least <b>%1$s</b> to make some space for receiving.]]></string>
    <string name="error_ln_send_small"><![CDATA[Can\'t send this Lightning payment because requested amount of <b>%1$s</b> is too small, a minimal amount is <b>%2$s</b>.]]></string>
    <string name="error_ln_send_reserve"><![CDATA[Can\'t send Lightning payments yet because first you need to receive at least <b>%1$s</b> to make some space for sending.]]></string>
    <string name="error_ln_send_network"><![CDATA[Can\'t send this Lightning payment because it belongs to some unknown network.]]></string>
    <string name="error_ln_send_split"><![CDATA[Can\'t proceed with this split invoice because its split parameters are wrong.]]></string>
    <string name="error_ln_send_features"><![CDATA[Can\'t send this Lightning payment because it has some unknown features.]]></string>
    <string name="error_ln_send_done_already"><![CDATA[Can\'t send this Lightning payment because it has already been sent.]]></string>
    <string name="error_ln_send_expired"><![CDATA[Can\'t send this Lightning payment because invoice has expired by now.]]></string>
    <string name="error_ln_send_in_flight"><![CDATA[Can\'t send this Lightning payment because it is already in-flight.]]></string>
    <string name="error_nothing_in_clipboard"><![CDATA[
        <b>Nothing useful is found in clipboard</b>, please copy something first.
        <br><br>A complete list of stuff which can be pasted into or <b>shared</b> with this wallet:<br><br>
        - <b>Bitcoin addresses</b><br>
        - <b>Lightning invoices</b><br>
        - <b>Lightning node keys</b><br>
        - <b>LNURL links</b>
    ]]></string>
    <string name="incoming_notify_title_wait">Waiting for incoming payment</string>
    <string name="incoming_notify_title_process">Payment is being processed</string>
    <string name="incoming_notify_body">Keep wallet running to get %1$s</string>
    <string name="tx_ln_notice_split">%1$d\%% split&#160;|&#160;</string>
    <string name="tx_description_op_return">Preimage broadcast</string>
    <string name="tx_description_funding">Lightning channel funding</string>
    <string name="tx_description_refunding">Channel balance refunding</string>
    <string name="tx_description_htlc_claiming">Lightning payment claiming</string>
    <string name="tx_description_penalty">Channel breach penalty</string>
    <string name="tx_btc">Bitcoin Transaction</string>
    <string name="tx_ln">Lightning Payment</string>
    <string name="tx_state_confs">depth %1$s of %2$s</string>
    <string name="tx_state_double_spent">failed</string>
    <string name="popup_sent_at"><![CDATA[<b>Sent</b>&#160;%1$s]]></string>
    <string name="popup_received_at"><![CDATA[<b>Received</b>&#160;%1$s]]></string>
    <string name="popup_to_address"><![CDATA[<b>to&#160;address</b>&#160;%1$s]]></string>
    <string name="popup_with_node"><![CDATA[<b>with&#160;node</b>&#160;%1$s]]></string>
    <string name="popup_label"><![CDATA[<b>label</b>&#160;%1$s]]></string>
    <string name="popup_txid"><![CDATA[<b>txid</b>&#160;%1$s]]></string>
    <string name="popup_prior_chain_balance"><![CDATA[<b>prior&#160;balance</b>&#160;%1$s]]></string>
    <string name="popup_chain_fee"><![CDATA[<b>chain&#160;fee</b>&#160;%1$s]]></string>
    <string name="popup_then"><![CDATA[<b>then</b>&#160;%1$s]]></string>
    <string name="popup_now"><![CDATA[<b>now</b>&#160;%1$s]]></string>
    <string name="sets_use_fp">Use authentication</string>
    <string name="fp_no_support">No authentication support on this phone</string>
    <string name="fp_not_available">Authentication support is blocked at the moment, try again later</string>
    <string name="fp_add_auth_method">Register at least one authentication method in system settings</string>
    <string name="fp_auth_error"><![CDATA[<b>Authentication error</b><br><br><b>Details</b>: %1$s<br><br><b>Code</b>: %2$s]]></string>
    <string name="fp_title">Wallet authentication</string>
    <string name="orbot_status">Checking Orbot status&#8230;</string>
    <string name="orbot_err_not_installed"><b>Orbot is not installed so Tor network can not be used right now</b>. Further wallet progress has been halted because your settings require Tor protection.</string>
    <string name="chan_capacity">Capacity</string>
    <string name="chan_can_send">Can send</string>
    <string name="chan_can_receive">Can receive</string>
    <string name="chan_in_flight">Value in-flight</string>
    <string name="chan_refundable">Refundable</string>
    <string name="chan_depth">Funding depth</string>
</resources>