<LinearLayout
    style="@style/StandardXYMarginLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style="@style/BoundedFillingView"
        android:text="@string/setup_title"
        android:layout_width="wrap_content"
        android:textSize="@dimen/header_size"/>

    <!-- new wallet -->

    <com.ornach.nobobutton.NoboButton
        android:layout_marginTop="@dimen/square_button_size"
        app:nb_text="@string/setup_create_new"
        android:onClick="createNewWallet"
        style="@style/ActionButton"/>

    <TextView
        android:text="@string/setup_create_new_hint"
        android:layout_marginTop="@dimen/chip_default_padding_edge"
        style="@style/BoundedFillingView"/>

    <!-- backup file -->

    <com.ornach.nobobutton.NoboButton
        android:layout_marginTop="@dimen/square_button_size"
        app:nb_text="@string/setup_backup_file"
        android:onClick="useBackupFile"
        style="@style/ActionButton"/>

    <TextView
        android:text="@string/setup_backup_file_hint"
        android:layout_marginTop="@dimen/chip_default_padding_edge"
        style="@style/BoundedFillingView"/>

    <!-- recovery phrase only -->

    <com.ornach.nobobutton.NoboButton
        android:layout_marginTop="@dimen/square_button_size"
        app:nb_text="@string/setup_recovery_phrase"
        android:onClick="useRecoveryPhrase"
        style="@style/ActionButton"/>

    <TextView
        android:text="@string/setup_recovery_phrase_hint"
        android:layout_marginTop="@dimen/chip_default_padding_edge"
        style="@style/BoundedFillingView"/>

</LinearLayout>